--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-## HOLA CARACOLA 👋
+## HOLA CARACOLA 🌱  👋
 
 <!--
 **Rocacolaa/Rocacolaa** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
