--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,8 +34,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge"><b>JANE BLOGLIFE</b></h1>
-    <h6>Bienvenido al blog sobre MURCIA. <span class="w3-tag">Jane's world</span></h6>
+    <h1 class="w3-xxxlarge"><b>MURCIA BLOG</b></h1>
+    <h6>Bienvenido al blog sobre  <span class="w3-tag">MURCIA</span></h6>
   </header>
 
   <!-- Image header -->
