--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <style>
-    body, h1 {
-      font-family: "Raleway", sans-serif
-    }
-    body, html {
-      height: 100%
-    }
+    body,h1 {font-family: "Raleway", sans-serif}
+    body, html {height: 100%}
     .bgimg {
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/61/Catedral_de_Murcia.jpg');
       min-height: 100%;
@@ -28,23 +24,23 @@
     <p>Murcia</p>
   </div>
   <div class="w3-display-bottomleft w3-container">
-    <p class="w3-xlarge">Una joya del sureste español</p>
-    <p>Foto: Catedral de Murcia</p>
+    <p class="w3-xlarge">Una ciudad con historia y sabor</p>
+    <p>Fotografía: Catedral de Murcia</p>
   </div>
 </div>
 
 <div class="w3-container w3-padding-64 w3-center">
   <h2>Bienvenido a Murcia</h2>
-  <p class="w3-opacity"><i>Una ciudad con historia, cultura y sabor</i></p>
-  <p class="w3-justify">Murcia es una ciudad del sureste de España, famosa por su clima cálido, su huerta y su vibrante vida universitaria. Fundada por los árabes en el siglo IX, combina historia y modernidad en un entorno acogedor. Entre sus monumentos más destacados están la Catedral de Santa María, el Real Casino y múltiples plazas llenas de vida.</p>
+  <p class="w3-opacity"><i>La esencia del sureste español</i></p>
+  <p class="w3-justify">Murcia es una ciudad que combina tradición y modernidad. Conocida por su gastronomía, su clima soleado y su rica herencia cultural, es un lugar perfecto para descubrir la autenticidad del sureste de España.</p>
 </div>
 
 <div class="w3-row-padding w3-padding-32 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>La Catedral de Murcia</h1>
-      <h5 class="w3-padding-32">Una mezcla única de estilos arquitectónicos</h5>
-      <p class="w3-text-grey">Construida entre los siglos XIV y XVIII, la Catedral de Murcia es uno de los símbolos más emblemáticos de la ciudad. Su impresionante fachada barroca y su campanario de más de 90 metros de altura hacen de ella una visita imprescindible para todo viajero.</p>
+      <h1>Catedral de Murcia</h1>
+      <h5 class="w3-padding-32">Un icono del barroco español</h5>
+      <p class="w3-text-grey">La Catedral de Santa María, ubicada en pleno centro, es el símbolo más representativo de Murcia. Su fachada barroca y su majestuosa torre hacen de ella una parada obligatoria para los visitantes.</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -60,15 +56,15 @@
     </div>
 
     <div class="w3-twothird">
-      <h1>La Plaza de las Flores</h1>
-      <h5 class="w3-padding-32">Un rincón lleno de vida y sabor</h5>
-      <p class="w3-text-grey">Situada en el corazón de Murcia, la Plaza de las Flores es conocida por sus bares de tapas, floristerías y su ambiente animado. Es el lugar ideal para disfrutar de una marinera (tapa típica) con una cerveza fresca mientras se contempla la vida local.</p>
+      <h1>Plaza de las Flores</h1>
+      <h5 class="w3-padding-32">Color, vida y sabor murciano</h5>
+      <p class="w3-text-grey">Esta plaza es uno de los rincones más animados de Murcia. Conocida por sus floristerías y bares de tapas, es el sitio perfecto para disfrutar del ambiente local y degustar una típica marinera.</p>
     </div>
   </div>
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-  <h1 class="w3-margin w3-xlarge">Explora, saborea y enamórate de Murcia</h1>
+  <h1 class="w3-margin w3-xlarge">Murcia te espera con los brazos abiertos</h1>
 </div>
 
 </body>
