--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -1,71 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Descubre Murcia</title>
+  <title>W3.CSS Template</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    body,h1 {font-family: "Raleway", sans-serif}
-    body, html {height: 100%}
-    .bgimg {
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/61/Catedral_de_Murcia.jpg');
-      min-height: 100%;
-      background-position: center;
-      background-size: cover;
-    }
+    h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
+    body {font-family: "Open Sans"}
   </style>
 </head>
-<body>
+<body class="w3-light-grey">
 
-<div class="bgimg w3-display-container w3-text-white">
-  <div class="w3-display-middle w3-jumbo">
-    <p>Murcia</p>
-  </div>
-  <div class="w3-display-bottomleft w3-container">
-    <p class="w3-xlarge">Una ciudad con historia y sabor</p>
-    <p>Fotografía: Catedral de Murcia</p>
-  </div>
+<!-- Navigation bar -->
+<div class="w3-bar w3-black w3-hide-small">
+  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 3</a>
 </div>
 
-<div class="w3-container w3-padding-64 w3-center">
-  <h2>Bienvenido a Murcia</h2>
-  <p class="w3-opacity"><i>La esencia del sureste español</i></p>
-  <p class="w3-justify">Murcia es una ciudad que combina tradición y modernidad. Conocida por su gastronomía, su clima soleado y su rica herencia cultural, es un lugar perfecto para descubrir la autenticidad del sureste de España.</p>
-</div>
+<!-- Page Container -->
+<div class="w3-content" style="max-width:1600px">
 
-<div class="w3-row-padding w3-padding-32 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Catedral de Murcia</h1>
-      <h5 class="w3-padding-32">Un icono del barroco español</h5>
-      <p class="w3-text-grey">La Catedral de Santa María, ubicada en pleno centro, es el símbolo más representativo de Murcia. Su fachada barroca y su majestuosa torre hacen de ella una parada obligatoria para los visitantes.</p>
-    </div>
+  <!-- Grid -->
+  <div class="w3-row-padding">
 
-    <div class="w3-third w3-center">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Catedral_de_Murcia.jpg" style="width:100%" alt="Catedral de Murcia">
-    </div>
-  </div>
-</div>
-
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Plaza_de_las_Flores_Murcia_01.jpg" style="width:100%" alt="Plaza de las Flores">
-    </div>
-
-    <div class="w3-twothird">
-      <h1>Plaza de las Flores</h1>
-      <h5 class="w3-padding-32">Color, vida y sabor murciano</h5>
-      <p class="w3-text-grey">Esta plaza es uno de los rincones más animados de Murcia. Conocida por sus floristerías y bares de tapas, es el sitio perfecto para disfrutar del ambiente local y degustar una típica marinera.</p>
-    </div>
-  </div>
-</div>
-
-<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-  <h1 class="w3-margin w3-xlarge">Murcia te espera con los brazos abiertos</h1>
-</div>
-
-</body>
-</html>
+    <!-- Blog entries -->
+    <div class="w3-col l8 s12">
+      <!-- Blog entry 1 -->
+      <div class="w3-container w3-white w3-margin w3-padding-large">
+        <h2 class="w3-center">TITLE HEADING</h2>
+        <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+        <div class="w3-justify">
+          <img src="https://www.w3schools.com/w3images/woods.jpg" alt="Nature" style="width:100%" class="w3-padding-16">
+          <p><strong>More Hats!</strong> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
+          <p>Convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+          <div class="w3-row">
+            <div class="w3-col m8 s12">
+              <button class="w3-button w3-padding-large w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button>
+            </div>
+            <div class="w3-col m4 w3-hide-small">
+              <button
