--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>W3.CSS Template</title>
+  <title>Murcia Blog</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
@@ -15,33 +15,49 @@
 </head>
 <body class="w3-light-grey">
 
-<!-- Navigation bar -->
 <div class="w3-bar w3-black w3-hide-small">
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small">Link 3</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Historia</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Gastronomía</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Cultura</a>
 </div>
 
-<!-- Page Container -->
 <div class="w3-content" style="max-width:1600px">
-
-  <!-- Grid -->
   <div class="w3-row-padding">
 
-    <!-- Blog entries -->
     <div class="w3-col l8 s12">
-      <!-- Blog entry 1 -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
-        <h2 class="w3-center">TITLE HEADING</h2>
-        <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+        <h2 class="w3-center">Descubriendo Murcia</h2>
+        <h5>Explorando el sureste español, <span class="w3-opacity">7 de mayo de 2025</span></h5>
         <div class="w3-justify">
-          <img src="https://www.w3schools.com/w3images/woods.jpg" alt="Nature" style="width:100%" class="w3-padding-16">
-          <p><strong>More Hats!</strong> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
-          <p>Convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Catedral_de_Murcia_desde_el_Puente_de_Los_Peligros.jpg" alt="Murcia" style="width:100%" class="w3-padding-16">
+          <p><strong>Bienvenidos a Murcia</strong>. Esta ciudad del sureste de España es conocida por su impresionante catedral barroca, su huerta fértil y su vibrante cultura. Fundada en el año 825, Murcia es una joya escondida que combina tradición e innovación.</p>
+          <p>En este blog hablaremos sobre sus rincones históricos, su deliciosa gastronomía —como el zarangollo y el pastel de carne—, y las fiestas populares como el Bando de la Huerta. ¡Acompáñame a descubrirla!</p>
+
           <div class="w3-row">
             <div class="w3-col m8 s12">
-              <button class="w3-button w3-padding-large w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button>
+              <p><button class="w3-button w3-padding-large w3-white w3-border"><b><i class="fa fa-thumbs-up"></i> Me gusta</b></button></p>
             </div>
             <div class="w3-col m4 w3-hide-small">
-              <button
+              <p><button class="w3-button w3-padding-large w3-white w3-border w3-right"><b>Comentarios</b> <span class="w3-tag">2</span></button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-col l4">
+      <div class="w3-white w3-margin">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Murcia_-_Plaza_de_las_Flores.jpg" alt="Plaza de las Flores" style="width:100%" class="w3-grayscale">
+        <div class="w3-container w3-black">
+          <h4>Sobre mí</h4>
+          <p>Soy apasionado de los viajes y la historia local. En este blog comparto todo lo que me enamora de Murcia: su cultura, su comida, y su gente.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+</body>
+</html>
