--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -15,48 +15,57 @@
 </head>
 <body class="w3-light-grey">
 
+<!-- Navigation bar -->
 <div class="w3-bar w3-black w3-hide-small">
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small">Historia</a>
-  <a href="#" class="w3-bar-item w3-button w3-hide-small">Gastronomía</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Murcia</a>
   <a href="#" class="w3-bar-item w3-button w3-hide-small">Cultura</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Gastronomía</a>
+  <a href="#" class="w3-bar-item w3-button w3-hide-small">Lugares</a>
 </div>
 
+<!-- Page content -->
 <div class="w3-content" style="max-width:1600px">
+
+  <!-- Grid -->
   <div class="w3-row-padding">
 
+    <!-- Blog entries -->
     <div class="w3-col l8 s12">
-      <div class="w3-container w3-white w3-margin w3-padding-large">
-        <h2 class="w3-center">Descubriendo Murcia</h2>
-        <h5>Explorando el sureste español, <span class="w3-opacity">7 de mayo de 2025</span></h5>
-        <div class="w3-justify">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Catedral_de_Murcia_desde_el_Puente_de_Los_Peligros.jpg" alt="Murcia" style="width:100%" class="w3-padding-16">
-          <p><strong>Bienvenidos a Murcia</strong>. Esta ciudad del sureste de España es conocida por su impresionante catedral barroca, su huerta fértil y su vibrante cultura. Fundada en el año 825, Murcia es una joya escondida que combina tradición e innovación.</p>
-          <p>En este blog hablaremos sobre sus rincones históricos, su deliciosa gastronomía —como el zarangollo y el pastel de carne—, y las fiestas populares como el Bando de la Huerta. ¡Acompáñame a descubrirla!</p>
 
-          <div class="w3-row">
-            <div class="w3-col m8 s12">
-              <p><button class="w3-button w3-padding-large w3-white w3-border"><b><i class="fa fa-thumbs-up"></i> Me gusta</b></button></p>
-            </div>
-            <div class="w3-col m4 w3-hide-small">
-              <p><button class="w3-button w3-padding-large w3-white w3-border w3-right"><b>Comentarios</b> <span class="w3-tag">2</span></button></p>
-            </div>
+      <!-- Blog entry -->
+      <div class="w3-container w3-white w3-margin w3-padding-large">
+        <h2 class="w3-center">Explorando Murcia</h2>
+        <h5>Una joya del sureste español, <span class="w3-opacity">7 de mayo de 2025</span></h5>
+        <p><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Catedral_de_Murcia_desde_el_Puente_de_Los_Peligros.jpg" alt="Catedral de Murcia" style="width:100%" class="w3-padding-16"></p>
+        <p><strong>Murcia</strong> es una ciudad que destaca por su historia, su arquitectura y su calidad de vida. Situada a orillas del río Segura, ofrece una mezcla perfecta entre tradición y modernidad.</p>
+        <p>Desde su majestuosa Catedral hasta sus plazas llenas de vida, Murcia invita a pasear sin prisa. Además, su gastronomía, con platos como el pastel de carne, la marinera y el arroz con costra, hacen las delicias de cualquier visitante.</p>
+        <div class="w3-row">
+          <div class="w3-col m8 s12">
+            <p><button class="w3-button w3-padding-large w3-white w3-border"><b><i class="fa fa-thumbs-up"></i> Me gusta</b></button></p>
+          </div>
+          <div class="w3-col m4 w3-hide-small">
+            <p><button class="w3-button w3-padding-large w3-white w3-border w3-right"><b>Comentarios</b> <span class="w3-tag">3</span></button></p>
           </div>
         </div>
       </div>
+
     </div>
 
+    <!-- About/Information menu -->
     <div class="w3-col l4">
+      <!-- About Card -->
       <div class="w3-white w3-margin">
         <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Murcia_-_Plaza_de_las_Flores.jpg" alt="Plaza de las Flores" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4>Sobre mí</h4>
-          <p>Soy apasionado de los viajes y la historia local. En este blog comparto todo lo que me enamora de Murcia: su cultura, su comida, y su gente.</p>
+          <p>Soy amante de la historia y la cultura murciana. En este blog comparto mis rincones favoritos, experiencias y recomendaciones para disfrutar Murcia como un local.</p>
         </div>
       </div>
     </div>
 
-  </div>
+  </div><br>
+
 </div>
 
 </body>
