--- a/ejerciciosconplantillas/secundaria03.html
+++ b/ejerciciosconplantillas/secundaria03.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Blog Murcianico</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
@@ -33,8 +33,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge"><b>JANE BLOGLIFE</b></h1>
-    <h6>Welcome to the blog of <span class="w3-tag">Jane's world</span></h6>
+    <h1 class="w3-xxxlarge"><b>BLOG MURCIANICO</b></h1>
+    <h6>Bienvenido al blog de <span class="w3-tag">MURCIA</span></h6>
   </header>
 
   <!-- Image header -->
