--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -41,8 +41,8 @@ and is wrapped around the whole page content, except for the footer in this exam
   <header class="w3-display-container w3-wide" id="home">
     <img class="w3-image" src="https://www.w3schools.com/w3images/jane.jpg" alt="Fashion Blog" width="1600" height="1060">
     <div class="w3-display-left w3-padding-large">
-      <h1 class="w3-text-white">Jane's</h1>
-      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>FASHION BLOG</b></h1>
+      <h1 class="w3-text-white">Mejor blog murciano en 2025.</h1>
+      <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>BLOG MURCIANICO</b></h1>
       <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>
     </div>
   </header>
@@ -56,8 +56,17 @@ and is wrapped around the whole page content, except for the footer in this exam
       <!-- Blog entry -->
       <div class="w3-container w3-white w3-margin w3-padding-large">
         <div class="w3-center">
-          <h3>TITLE HEADING</h3>
-          <h5>Title description, <span class="w3-opacity">May 2, 2016</span></h5>
+          <h3>¿Porque visitar Murcia?</h3>
+          <h5>Murcia es una ciudad española ubicada en el sureste, conocida por su clima cálido, su rica huerta y su patrimonio histórico, que incluye la Catedral de Murcia y el Palacio Episcopal. Es la capital de la región de Murcia.
+
+
+
+
+
+
+
+
+ <span class="w3-opacity">Mayo 7, 2025</span></h5>
         </div>
 
         <div class="w3-justify">
