--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -43,7 +43,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white">Mejor blog murciano en 2025.</h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>BLOG MURCIANICO</b></h1>
-      <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUBSCRIBE</button></h6>
+      <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">SUSCRIBETE</button></h6>
     </div>
   </header>
 
@@ -297,7 +297,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <!-- Subscribe -->
       <div class="w3-white w3-margin">
         <div class="w3-container w3-padding w3-black">
-          <h4>Subscribe</h4>
+          <h4>Suscribete</h4>
         </div>
         <div class="w3-container w3-white">
           <p>Enter your e-mail below and get notified on the latest blog posts.</p>
@@ -320,7 +320,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-modal-content" style="padding:32px">
     <div class="w3-container w3-white">
       <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
-      <h2 class="w3-wide">SUBSCRIBE</h2>
+      <h2 class="w3-wide">SUSCRIBETE</h2>
       <p>Join my mailing list to receive updates on the latest blog posts and other things.</p>
       <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
       <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Subscribe</button>
