--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -323,7 +323,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h2 class="w3-wide">SUSCRIBETE</h2>
       <p>Join my mailing list to receive updates on the latest blog posts and other things.</p>
       <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
-      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Subscribe</button>
+      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('suscribete').style.display='none'">Subscribe</button>
     </div>
   </div>
 </div>
