--- a/ejerciciosconplantillas/secundaria04.html
+++ b/ejerciciosconplantillas/secundaria04.html
@@ -316,14 +316,23 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 
 <!-- Subscribe Modal -->
-<div id="subscribe" class="w3-modal w3-animate-opacity">
+<div id="suscribete" class="w3-modal w3-animate-opacity">
   <div class="w3-modal-content" style="padding:32px">
     <div class="w3-container w3-white">
-      <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
+      <i onclick="document.getElementById('suscribete').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
       <h2 class="w3-wide">SUSCRIBETE</h2>
-      <p>Join my mailing list to receive updates on the latest blog posts and other things.</p>
+      <p>¡Suscribete al blog de Murcianicos para recibir las últimas novedades y estar al tanto de sus próximos posts directamente en mi correo!
+
+
+
+
+
+
+
+
+</p>
       <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
-      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('suscribete').style.display='none'">Subscribe</button>
+      <button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('suscribete').style.display='none'">Suscribete</button>
     </div>
   </div>
 </div>
