--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -1,1 +1,49 @@
-## HOLA CARACOLA 👋
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Digitalización</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image: url('https://images.unsplash.com/photo-1517336714731-489689fd1ca8'); /* Imagen de ordenador */
+      background-size: cover;
+      background-position: center;
+      color: white;
+      text-align: center;
+    }
+
+    .top-bar {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 15px;
+      text-align: left;
+    }
+
+    .top-bar a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .content {
+      margin-top: 20%;
+    }
+
+    h1 {
+      font-size: 60px;
+      text-shadow: 2px 2px 5px black;
+    }
+  </style>
+</head>
+<body>
+  <div class="top-bar">
+    <a href="https://rocacolaa.github.io/Rocacolaa/ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
+  </div>
+
+  <div class="content">
+    <h1>Digitalización</h1>
+  </div>
+</body>
+</html>
