--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1517336714731-489689fd1ca8'); /* Imagen de ordenador */
+      background-image: url('https://media.istockphoto.com/id/1292038829/es/foto/ordenador-port%C3%A1til-con-iluminaci%C3%B3n-rosa-azul-y-lugar-de-pantalla-en-blanco-sobre-fondo-oscuro.jpg?s=612x612&w=0&k=20&c=9VKFb-8sQsdJYg98Bbur5uT46gtQo3QlymFVQRTOBbo='); /* Imagen de ordenador */
       background-size: cover;
       background-position: center;
       color: white;
