--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://media.istockphoto.com/id/1292038829/es/foto/ordenador-port%C3%A1til-con-iluminaci%C3%B3n-rosa-azul-y-lugar-de-pantalla-en-blanco-sobre-fondo-oscuro.jpg?s=612x612&w=0&k=20&c=9VKFb-8sQsdJYg98Bbur5uT46gtQo3QlymFVQRTOBbo='); /* Imagen de ordenador */
+      background-image: url('https://preview.redd.it/which-one-of-these-would-be-a-better-wallpaper-for-a-laptop-v0-x3g74j2t24wd1.jpg?width=300&format=pjpg&auto=webp&s=21bfa5dd34e28e706c95bc5e98ecc6f41508d018'); /* Nueva imagen */
       background-size: cover;
       background-position: center;
       color: white;
