--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -7,43 +7,46 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://preview.redd.it/which-one-of-these-would-be-a-better-wallpaper-for-a-laptop-v0-x3g74j2t24wd1.jpg?width=300&format=pjpg&auto=webp&s=21bfa5dd34e28e706c95bc5e98ecc6f41508d018'); /* Nueva imagen */
+      background-image: url('https://wallpapers.com/images/hd/4k-ultra-hd-black-windows-c4ng4yvyo82rg4at.jpg');
       background-size: cover;
       background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
       color: white;
-      text-align: center;
+      position: relative;
     }
 
-    .top-bar {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 15px;
-      text-align: left;
+    .link {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 8px 12px;
+      border-radius: 4px;
     }
 
-    .top-bar a {
+    .link a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      font-size: 18px;
     }
 
-    .content {
-      margin-top: 20%;
-    }
-
-    h1 {
-      font-size: 60px;
-      text-shadow: 2px 2px 5px black;
+    .title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 48px;
+      text-shadow: 2px 2px 6px black;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    <a href="https://rocacolaa.github.io/Rocacolaa/ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
+  <div class="link">
+    <a href="https://pepebermudezr.github.io/pepebermudezr/ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
   </div>
 
-  <div class="content">
-    <h1>Digitalización</h1>
-  </div>
+  <div class="title">Digitalización</div>
 </body>
 </html>
