--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
   <div class="link">
-    <a href="https://pepebermudezr.github.io/pepebermudezr/ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
+    <a href="https://rocacolaa.github.io//Rocacolaa//ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
   </div>
 
   <div class="title">Digitalización</div>
