--- a/web/WEB.html
+++ b/web/WEB.html
@@ -37,6 +37,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 50px;
   font-weight: bold;
 }
+.collection img {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+}
 </style>
 </head>
 <body>
@@ -75,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
       <p>Diseños exclusivos para quienes marcan la diferencia.</p>
     </div>
     <div class="w3-col l6 w3-padding-large">
-      <img src="https://via.placeholder.com/600x750" class="w3-round w3-image w3-opacity-min" alt="Colección">
+      <img src="/attachments/yG4vxDXnoBLVXvFqbo4fd.png" class="w3-round w3-image w3-opacity-min" alt="Conjunto Rebel">
     </div>
   </div>
 </div>
