--- a/web/WEB.html
+++ b/web/WEB.html
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
       <p>Diseños exclusivos para quienes marcan la diferencia.</p>
     </div>
     <div class="w3-col l6 w3-padding-large">
-      <img src="/attachments/yG4vxDXnoBLVXvFqbo4fd.png" class="w3-round w3-image w3-opacity-min" alt="Conjunto Rebel">
+      <img src="web/images/2.png" class="w3-round w3-image w3-opacity-min" alt="Modelo Rebel">
     </div>
   </div>
 </div>
