--- a/ejerciciosconplantillas/index02.html
+++ b/ejerciciosconplantillas/index02.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Digitalización</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image: url('https://wallpapers.com/images/hd/4k-ultra-hd-black-windows-c4ng4yvyo82rg4at.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      color: white;
+      position: relative;
+    }
 
+    .link {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 8px 12px;
+      border-radius: 4px;
+    }
+
+    .link a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .digitalizacion-abajo-izquierda {
+      position: absolute;
+      bottom: 15px;
+      left: 15px;
+      font-size: 24px;
+      text-shadow: 2px 2px 6px black;
+    }
+
+    .digitalizacion-arriba-derecha {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      font-size: 24px;
+      text-shadow: 2px 2px 6px black;
+    }
+  </style>
+</head>
+<body>
+  <div class="link">
+    <a href="https://rocacolaa.github.io//Rocacolaa//ejerciciosconplantillas/secundaria04.html" target="_blank">Secundaria</a>
+  </div>
+
+  <div class="digitalizacion-abajo-izquierda">Digitalización</div>
+  <div class="digitalizacion-arriba-derecha">Digitalización</div>
+</body>
+</html>
