--- a/ejerciciosconplantillas/secundaria05.html
+++ b/ejerciciosconplantillas/secundaria05.html
@@ -362,4 +362,10 @@ function likeFunction(x) {
 </script>
 
 </body>
+    </style>
+</head>
+<body>
+  <div class="link">
+    <a href="https://rocacolaa.github.io//Rocacolaa//ejerciciosconplantillas/secundaria05.html" target="_blank">Secundaria</a>
+  </div>
 </html>
