--- a/ejerciciosconplantillas/WEB.html
+++ b/ejerciciosconplantillas/WEB.html
@@ -3,20 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grand Theft Auto VI - Mundo Abierto Definitivo</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Grand Theft Auto VI - La Página Definitiva</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: url('gta6-header.jpg') center/cover no-repeat;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .logo img {
+            width: 200px;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            background: rgba(0,0,0,0.8);
+        }
+
+        nav ul li {
+            margin: 10px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #e74c3c;
+            font-weight: bold;
+            padding: 10px;
+        }
+
+        .banner {
+            background: url('gta6-banner.jpg') center/cover no-repeat;
+            padding: 50px;
+            text-align: center;
+            font-size: 20px;
+        }
+
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+
+        section img {
+            width: 100%;
+            max-width: 800px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+
+        .gallery {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+
+        .gallery img {
+            width: 30%;
+            border-radius: 10px;
+        }
+
+        button {
+            background-color: #e74c3c;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+        }
+
+        button:hover {
+            background-color: #c0392b;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0,0,0,0.8);
+        }
+    </style>
 </head>
 <body>
 
     <header>
-        <h1>Grand Theft Auto VI</h1>
+        <div class="logo">
+            <img src="gta6-logo.png" alt="GTA 6 Logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#historia">Historia</a></li>
                 <li><a href="#mapa">Mapa y Exploración</a></li>
                 <li><a href="#jugabilidad">Jugabilidad</a></li>
-                <li><a href="#filtraciones">Filtraciones y Rumores</a></li>
+                <li><a href="#filtraciones">Filtraciones</a></li>
                 <li><a href="#galeria">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -24,28 +112,21 @@
     </header>
 
     <main>
-        <section id="inicio">
-            <h2>Bienvenido a la página de GTA 6</h2>
+        <section id="inicio" class="banner">
+            <h2>Bienvenido a la Página de GTA 6</h2>
             <p>El juego más esperado de Rockstar está en desarrollo. Descubre todas las novedades aquí.</p>
         </section>
 
         <section id="historia">
             <h2>Historia y Personajes</h2>
-            <p>GTA 6 nos transportará a una versión moderna de Vice City con una trama llena de acción, traiciones y ambición.</p>
-            <ul>
-                <li><strong>Protagonistas:</strong> Se rumorea que habrá una protagonista femenina por primera vez en la saga.</li>
-                <li><strong>Historia:</strong> Mafia, crimen y conspiraciones en un mundo más realista y profundo.</li>
-            </ul>
+            <p>La trama de GTA 6 nos transportará a una versión moderna de Vice City con una historia llena de acción, traiciones y ambición.</p>
+            <img src="vice-city.jpg" alt="Vice City GTA 6">
         </section>
 
         <section id="mapa">
             <h2>Mapa y Exploración</h2>
             <p>El mundo abierto más extenso jamás creado en la saga, con múltiples ciudades y ecosistemas detallados.</p>
-            <ul>
-                <li>Ciudades inspiradas en Miami y otras regiones tropicales.</li>
-                <li>Sistema de clima dinámico con huracanes y lluvias torrenciales.</li>
-                <li>Interactividad aumentada en cada rincón del mapa.</li>
-            </ul>
+            <img src="gta6-map.jpg" alt="Mapa de GTA 6">
         </section>
 
         <section id="jugabilidad">
@@ -65,9 +146,13 @@
         </section>
 
         <section id="galeria">
-            <h2>Galería</h2>
+            <h2>Galería de Imágenes</h2>
             <p>Explora imágenes filtradas y arte conceptual del juego.</p>
-            <!-- Espacio para futuras imágenes -->
+            <div class="gallery">
+                <img src="gta6-scene1.jpg" alt="Escena GTA 6">
+                <img src="gta6-scene2.jpg" alt="Gameplay GTA 6">
+                <img src="gta6-scene3.jpg" alt="Personajes GTA 6">
+            </div>
         </section>
     </main>
 
