--- a/web/WEB.html
+++ b/web/WEB.html
@@ -77,7 +77,7 @@
 <!-- Contact Section -->
 <div class="section" id="contact">
     <h2>Contacto</h2>
-    <p>Ubicación: Calle Libertad 99, Madrid, España</p>
+    <p>Ubicación: Avenida Reina Victoria, Cartagena Murcia, España</p>
 </div>
 
 <!-- Footer -->
